_notebooks/jitfailure-ffc_form_83e3ad2335ff032bc08e7f8df443665c85040bd5/error.log
/tmp/tmpobzfcho5/ffc_form_83e3ad2335ff032bc08e7f8df443665c85040bd5.cpp: In member function 'virtual void ffc_form_83e3ad2335ff032bc08e7f8df443665c85040bd5_cell_integral_main_otherwise::tabulate_tensor(double*, const double* const*, const double*, int) const':
/tmp/tmpobzfcho5/ffc_form_83e3ad2335ff032bc08e7f8df443665c85040bd5.cpp:119:18: error: redeclaration of 'const double J_c0'
     const double J_c0 = coordinate_dofs[0] * FE12_C0_D01_Q7[0][0][0] + coordinate_dofs[2] * FE12_C0_D01_Q7[0][0][1];
                  ^~~~
/tmp/tmpobzfcho5/ffc_form_83e3ad2335ff032bc08e7f8df443665c85040bd5.cpp:115:18: note: 'const double J_c0' previously declared here
     const double J_c0 = coordinate_dofs[0] * FE12_C0_D01_Q7[0][0][0] + coordinate_dofs[2] * FE12_C0_D01_Q7[0][0][1];
                  ^~~~
/tmp/tmpobzfcho5/ffc_form_83e3ad2335ff032bc08e7f8df443665c85040bd5.cpp:120:18: error: redeclaration of 'const double J_c3'
     const double J_c3 = coordinate_dofs[1] * FE12_C0_D01_Q7[0][0][0] + coordinate_dofs[5] * FE12_C0_D01_Q7[0][0][1];
                  ^~~~
/tmp/tmpobzfcho5/ffc_form_83e3ad2335ff032bc08e7f8df443665c85040bd5.cpp:116:18: note: 'const double J_c3' previously declared here
     const double J_c3 = coordinate_dofs[1] * FE12_C0_D01_Q7[0][0][0] + coordinate_dofs[5] * FE12_C0_D01_Q7[0][0][1];
                  ^~~~
/tmp/tmpobzfcho5/ffc_form_83e3ad2335ff032bc08e7f8df443665c85040bd5.cpp:121:18: error: redeclaration of 'const double J_c1'
     const double J_c1 = coordinate_dofs[0] * FE12_C0_D01_Q7[0][0][0] + coordinate_dofs[4] * FE12_C0_D01_Q7[0][0][1];
                  ^~~~
/tmp/tmpobzfcho5/ffc_form_83e3ad2335ff032bc08e7f8df443665c85040bd5.cpp:117:18: note: 'const double J_c1' previously declared here
     const double J_c1 = coordinate_dofs[0] * FE12_C0_D01_Q7[0][0][0] + coordinate_dofs[4] * FE12_C0_D01_Q7[0][0][1];
                  ^~~~
/tmp/tmpobzfcho5/ffc_form_83e3ad2335ff032bc08e7f8df443665c85040bd5.cpp:122:18: error: redeclaration of 'const double J_c2'
     const double J_c2 = coordinate_dofs[1] * FE12_C0_D01_Q7[0][0][0] + coordinate_dofs[3] * FE12_C0_D01_Q7[0][0][1];
                  ^~~~
/tmp/tmpobzfcho5/ffc_form_83e3ad2335ff032bc08e7f8df443665c85040bd5.cpp:118:18: note: 'const double J_c2' previously declared here
     const double J_c2 = coordinate_dofs[1] * FE12_C0_D01_Q7[0][0][0] + coordinate_dofs[3] * FE12_C0_D01_Q7[0][0][1];
                  ^~~~
